fix: iconly and bootstrap icons not showing

--- a/assets/scss/iconly.scss
+++ b/assets/scss/iconly.scss
@@ -1,10 +1,10 @@
 @font-face {
   font-family: 'Iconly---Bold';
-  src:  url('../fonts/Iconly---Bold.eot?jilz72');
-  src:  url('../fonts/Iconly---Bold.eot?jilz72#iefix') format('embedded-opentype'),
-    url('../fonts/Iconly---Bold.ttf?jilz72') format('truetype'),
-    url('../fonts/Iconly---Bold.woff?jilz72') format('woff'),
-    url('../fonts/Iconly---Bold.svg?jilz72#Iconly---Bold') format('svg');
+  src:  url('../vendors/iconly/fonts/Iconly---Bold.eot?jilz72');
+  src:  url('../vendors/iconly/fonts/Iconly---Bold.eot?jilz72#iefix') format('embedded-opentype'),
+    url('../vendors/iconly/fonts/Iconly---Bold.ttf?jilz72') format('truetype'),
+    url('../vendors/iconly/fonts/Iconly---Bold.woff?jilz72') format('woff'),
+    url('../vendors/iconly/fonts/Iconly---Bold.svg?jilz72#Iconly---Bold') format('svg');
   font-weight: normal;
   font-style: normal;
   font-display: block;
